--- a/Fanart.html
+++ b/Fanart.html
@@ -351,7 +351,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/moonav1.png" title="Moona" data-size="905x1280">
@@ -387,7 +387,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/moona_susno.png" title="Moona" data-size="905x1280">
@@ -405,7 +405,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column loli baelz" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column loli baelz vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/hakozs.png" title="Bae" data-size="905x1280">
@@ -424,7 +424,7 @@
 
                                 
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart loli" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart loli vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Rushia Completed.png" title="Rushia" data-size="905x1280">
@@ -478,7 +478,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column gura loli" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column gura loli vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
