--- a/allart.html
+++ b/allart.html
@@ -274,6 +274,7 @@
                                         <button type="button" data-filter=".bikini">bikini</button>
                                         <button type="button" data-filter=".loli">loli</button>
                                         <button type="button" data-filter=".male">Male</button>
+                                        <button type="button" data-filter=".vtube">Vtubers</button>
 
                                     </div>
                                 </div>
@@ -333,8 +334,8 @@
                                         <p>Makima</p>
                                     </div>
                                 </div>
-
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona" data-aos="fade-up">
+ 
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/moonav1.png" title="Moona" data-size="905x1280">
@@ -425,7 +426,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/moona_susno.png" title="Gura" data-size="905x1280">
@@ -443,7 +444,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/hakozs.png" title="Gura" data-size="905x1280">
@@ -511,7 +512,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart loli" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart loli vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Rushia Completed.png" title="Gura" data-size="905x1280">
@@ -529,7 +530,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/GuraTweetEdited.png" title="Gura" data-size="905x1280">
