--- a/comminfo.html
+++ b/comminfo.html
@@ -397,12 +397,10 @@
                     </section>
                     <!--========== End Bottom text Section ========== -->
                     <center><h1>Artprint and Merch</h1>
-                    <a href="https://www.inprnt.com/gallery/kikii/" class="mt-30 dsn-button p-relative mr-20 dsn-load-animate">
+                    <a href="https://www.inprnt.com/gallery/ruuudy/" class="mt-30 dsn-button p-relative mr-20 dsn-load-animate">
                         <span class="dsn-border-rdu border-color-theme-color"></span>Artprint Shop
                     </a>
-                    <a href="https://shizu.creator-spring.com/" class="mt-30 dsn-button p-relative mr-20 dsn-load-animate">
-                        <span class="dsn-border-rdu border-color-theme-color"></span>Merch Shop
-                    </a></center>
+                   <br>
                     <br>
 <hr style="color:  rgb(190, 190, 190); opacity: 0.3;">
                     <!--========== Pricing Section ========== -->
