--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
                             <div class="d-grid  grid-lg-3 grid-md-2 dsn-item-filter  dsn-isotope dsn-col v-dark-head"
                                 data-dsn-item=".work-item" data-dsn-animate-multi data-dsn-duration="0">
                                                       
-                                <!-- ========== IMAGE: Moona ========== -->
+                                <!-- ========== IMAGE: Frieren (Do not remove the top 3 image it will break the gallery, just make changes to it ) ========== -->
+                               
                                 <div class="folio-item work-item dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
@@ -283,16 +284,16 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\MOMO.jpg" title="Moona" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\MOMO.jpg" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\Freerain.jpg" title="Moona" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\Freerain.jpg" alt="">
                                         </a>
                                     </div>
 
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/FanArt</div>
-                                        <h4 class="folio-item__title"> Momo Ayase!</h4>
+                                        <h4 class="folio-item__title"> Frieren!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1848894457367957589" title="Twitter" class="folio-item__project-link">Momo</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1811205183671554323" title="Twitter" class="folio-item__project-link">Momo</a>
                                      <div class="folio-item__caption">
                                         <p>Momo Ayase</p>
                                     </div>
