--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
                                        </div>
    
                                        <div class="folio-item__info">
-                                           <div class="folio-item__cat">illustration/FanArt</div>
+                                           <div class="folio-item__cat">illustration/FanArt 2024</div>
                                            <h4 class="folio-item__title"> Momo Ayase!</h4>
                                         </div>
                                         <a target=”blank” href="https://x.com/shirozu07/status/1848894457367957589" title="Twitter" class="folio-item__project-link">Momo</a>
                                         <div class="folio-item__caption">
-                                           <p>Momo Ayase</p>
+                                           <p>Twitter</p>
                                        </div>
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
@@ -295,12 +295,12 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title"> Frieren!</h4>
                                      </div>
                                      <a target=”blank” href="https://x.com/shirozu07/status/1811205183671554323" title="Twitter" class="folio-item__project-link">Momo</a>
                                      <div class="folio-item__caption">
-                                        <p>Momo Ayase</p>
+                                        <p>Twitter</p>
                                     </div>
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
@@ -315,7 +315,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2023</div>
                                         <h4 class="folio-item__title"> Moona!</h4>
                                      </div>
                                      <a target=”blank” href="https://x.com/shirozu07/status/1706774801447281015?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -324,17 +324,18 @@
                                     </div>
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
-
+                                 
+                                <!-- ========== IMAGE: Makima ========== -->
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Makima5sh.png" title="Makima" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima5sh.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\wd.jpg" title="Makima" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\wd.jpg" alt="">
                                         </a>
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
                                      <a target=”blank” href="https://twitter.com/shirozu07/status/1698811483306492374?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -342,7 +343,8 @@
                                         <p>Makima</p>
                                     </div>
                                 </div>
-
+                                <!-- ========== IMAGE END ========== -->
+                                
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column  fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
@@ -351,7 +353,7 @@
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2023</div>
                                         <h4 class="folio-item__title"> Asuna Ichinose!</h4>
                                      </div>
                                      <a target=”blank” href="https://x.com/shirozu07/status/1715760530798096397?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -371,7 +373,7 @@
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2023</div>
                                         <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
                                      <a target=”blank” href="https://twitter.com/shirozu07/status/1696261022586417205?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -391,7 +393,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
+                                        <div class="folio-item__cat">illustration/Commission 2023</div>
                                         <h4 class="folio-item__title">Bocchi!</h4>
                                      </div>
                                      <a target=”blank” href="https://twitter.com/shirozu07/status/1691494844580155392?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -409,7 +411,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Study</div>
+                                        <div class="folio-item__cat">illustration/Study 2023</div>
                                         <h4 class="folio-item__title">Kenma!</h4>
                                      </div>
                                      <a target=”blank” href="https://twitter.com/shirozu07/status/1700209568318632103?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -428,7 +430,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2023</div>
                                         <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
                                      <a target=”blank” href="https://twitter.com/shirozu07/status/1693699033590874531?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
