--- a/TOS.html
+++ b/TOS.html
@@ -54,12 +54,12 @@
 <div class="site-header dsn-container dsn-load-animate">
     <div class="extend-container d-flex w-100 align-items-baseline justify-content-between align-items-end">
         <div class="inner-header p-relative">
-            <div class="main-logo">
-                <a class="effect-ajax" href="index.html" data-dsn="parallax">
-                    <img class="light-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/logo.png" alt="" />
-                    <img class="dark-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/logo-dark.png" alt="" />
-                </a>
-            </div>
+          <div class="main-logo">
+            <a class="effect-ajax" href="index.html" data-dsn="parallax">
+                <img class="light-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\img\logo.png" alt="" />
+                <img class="dark-logo" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\img\logo lihy.png" alt="" />
+            </a>
+        </div>
         </div>
         <div class="menu-icon d-flex align-items-baseline">
             <div class="text-menu p-relative font-heading text-transform-upper">
